About-section almost done, need to fix gap margins between divs

--- a/src/components/AboutSection/AboutSection.scss
+++ b/src/components/AboutSection/AboutSection.scss
@@ -5,6 +5,7 @@
   justify-content: flex-start;
   width: 100%;
   height: 867px;
+  background-color: rgba(250, 250, 250, 1);
 
   .about-us-content-container {
     display: flex;
@@ -14,7 +15,6 @@
     padding: 24px 25px 48px 24px;
 
     .about-us-logo-container {
-      padding-bottom: 32px;
     }
 
     .app-stores-container {
@@ -33,7 +33,6 @@
       width: 180px;
       height: 120px;
       gap: 16px;
-      padding-bottom: 48px;
 
       .apple-store-container,
       .google-play-store-container {
@@ -82,6 +81,36 @@
           letter-spacing: 1.2899999618530273px;
           text-align: center;
         }
+      }
+    }
+
+    .would-be-replaced-with-header-component {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: flex-start;
+
+      font-size: 18px;
+      line-height: 35px;
+      letter-spacing: 1.25px;
+    }
+
+    .about-us-descriptions-container {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      font-size: 18px;
+      line-height: 28px;
+      letter-spacing: 2.140000104904175px;
+
+      .about-us-description-top-text {
+        width: 331px;
+        height: 280px;
+      }
+      .about-us-description-bottom-text {
+        width: 306px;
+        height: 168px;
       }
     }
   }
